# ScalableMultiband_RNN

./: .gitignore  Load_Process_Multiband_Period_3.py  Multiband_Period_03.py  Multiband_utils.py  README.md  data.dvc  pyproject.toml  requirements.txt
examples/: 03_trainModels.py  04_computeMetrics.py
examples/.ipynb_checkpoints/: Run_54_Gaia_c+r-checkpoint.ipynb
examples/01_CreateFolds/.ipynb_checkpoints/: Create_folds_Gaia-checkpoint.ipynb
examples/01_CreateFolds/Folds/: test.csv
examples/02_CreateRecords/: Create_records.ipynb  TODOs.py
examples/02_CreateRecords/.ipynb_checkpoints/: Create_records-checkpoint.ipynb
examples/03_TrainModels/: Run_c+r.ipynb
examples/03_TrainModels/.ipynb_checkpoints/: Run_c+r-checkpoint.ipynb
examples/Folds/Fold_1/: scalers.pkl
examples/Folds/Fold_2/: lc_parameters.npz  scalers.pkl  train.csv
examples/Folds/Fold_3/: metadata_preprocess.json  scalers.pkl  train.csv
notebooks/01_CreateFolds/: Create_folds_Gaia.ipynb
notebooks/01_CreateFolds/.ipynb_checkpoints/: TODOs-checkpoint.py
notebooks/01_CreateFolds/Folds/: test.csv
notebooks/02_CreateRecords/: Create_records.ipynb
notebooks/03_TrainModels/: Run_c+r.ipynb
notebooks/04_ComputeMetrics/: Test_c+r.ipynb
src/base/: Load_Process.py  Multiband.py  Parser.py  Utils.py  plot.py
src/classifier/: CustomLayers.py  CustomLosses.py  CustomMetrics.py  CustomModels.py  CustomScalers.py  Multiband.py
tests/: 01_CreateFolds.py  02_createRecords.py  03_trainModels.py  04_computeMetrics.py  test_metric.ipynb  test_train.py
tests/Folds/: test.csv
(+2355 files in other folders)
