[tool.poetry]
name = "multibandscalable-rnn"
version = "0.1.0"
description = ""
authors = ["iebecker <iebecker@uc.cl>"]
readme = "README.md"
packages = [{include = "multibandscalable_rnn"}]

[tool.poetry.dependencies]
python = "^3.8"
joblib = "^1.3.1"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
#tensorflow-io-gcs-filesystem = "0.23.1"
matplotlib = "^3.7.2"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
